--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,18 @@
     <string name="mapa">Mapa</string>
     <string name="calendario">Calendario</string>
     <string name="mensaje">Mensaje</string>
+    <string name="publicacion">Publicaciones</string>
+    <string name="fotosFeed">Fotos</string>
+    <string name="fiends">Amigos</string>
+    <string name="travelReserve">Travel</string>
+    <string name="genero">Genero</string>
+    <string name="masculino">Masculino</string>
+    <string name="femenino">Femenino</string>
+    <string name="otros">Otros</string>
+    <string name="pais">Pais</string>
+    <string name="Contenido">Escribe un comentario...</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
