--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="otros">Otros</string>
     <string name="pais">Pais</string>
     <string name="Contenido">Escribe un comentario...</string>
+    <string name="postear">Postear</string>
+    <string name="photo_description">Photo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
